fixed fa display/spacing issue in footerpage

--- a/src/components/FooterPage/footerpage.css
+++ b/src/components/FooterPage/footerpage.css
@@ -11,7 +11,7 @@
 }
 
 .footer-page-socials {
-    padding-bottom: 10px;
+    padding-bottom: 8px;
 }
 
 .footer-page-body {
